--- a/src/style.scss
+++ b/src/style.scss
@@ -206,6 +206,79 @@
       }
     }
   }
+
+  &.clock-container {
+    position: relative;
+    max-width: 250px;
+
+    .clock-wrapper {
+      position: relative;
+      padding-bottom: 100%;
+
+      .clock-content {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,.07);
+        border-radius: 100%;
+
+        > span {
+          position: absolute;
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+          height: 24px;
+          width: 24px;
+          font-size: 14px;
+          line-height: 1;
+          border-radius: 100%;
+          cursor: pointer;
+          user-select: none;
+        }
+
+        .clock-selection {
+          position: absolute;
+          top: calc(50% - 1px);
+          left: 50%;
+          display: block;
+          height: 2px;
+          width: calc(50% - 32px);
+          background: rgba(0, 0, 0, 0.5);
+          transform-origin: left;
+
+          &.pm {
+            width: calc(25% - 12px);
+          }
+
+          &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: -4px;
+            left: -5px;
+            width: 10px;
+            height: 10px;
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 100%;
+          }
+
+          &:after {
+            content: '';
+            display: block;
+            position: absolute;
+            top: -10px;
+            right: -24px;
+            width: 24px;
+            height: 24px;
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 100%;
+          }
+        }
+      }
+    }
+  }
 }
 
 .react-next-dates-popper {
