--- a/src/style.scss
+++ b/src/style.scss
@@ -278,8 +278,19 @@ $theme: map-merge(
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.07);
-        border-radius: 100%;
+
+
+        &:before {
+          display: block;
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, 0.07);
+          border-radius: 100%;
+        }
 
         > span {
           position: absolute;
