[clock] refactor clock display and add selected class

--- a/src/style.scss
+++ b/src/style.scss
@@ -305,6 +305,10 @@ $theme: map-merge(
           cursor: pointer;
           user-select: none;
           z-index: 1;
+
+          &.selected {
+            color: #ffffff;
+          }
         }
 
         .clock-selection {
