--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,9 @@ $theme: map-merge(
     color-primary: #2979ff,
     color-grey: #6b6d77,
     color-light-grey: #f2f2f2,
+    color-dark-grey: #2c2e3d,
+    color-white: #ffffff,
+    color-dark: #000000,
     font-size-small: 12px,
     font-size-base: 14px,
     font-size-large: 16px,
@@ -23,6 +26,7 @@ $theme: map-merge(
     --#{$key}: #{$value};
   }
 
+  @include v(color, color-dark);
   @include v(font-size, font-size-base);
 
   .navigation {
@@ -50,6 +54,7 @@ $theme: map-merge(
         @include v(border-color, color-grey);
         box-sizing: border-box;
         transform: rotate(45deg);
+        transition: border-color 0.15s linear;
       }
 
       &.prev:before {
@@ -62,12 +67,16 @@ $theme: map-merge(
 
       &:hover {
         @include v(background, color-light-grey);
+
+        &:before {
+          @include v(border-color, color-dark-grey);
+        }
       }
     }
   }
 
   &.calendar {
-    background: #ffffff;
+    @include v(background, color-white);
 
     .navigation {
       display: grid;
@@ -101,7 +110,7 @@ $theme: map-merge(
             width: 0;
             height: 0;
             border: 5px solid transparent;
-            border-top-color: black;
+            @include v(border-top-color, color-dark);
           }
 
           &:hover {
@@ -109,6 +118,16 @@ $theme: map-merge(
           }
         }
       }
+    }
+
+    .-today {
+      font-weight: bold;
+    }
+
+    .-disabled {
+      opacity: 0.5;
+      cursor: default;
+      pointer-events: none;
     }
 
     .day-header {
@@ -120,7 +139,6 @@ $theme: map-merge(
 
       > span {
         @include v(color, color-grey);
-        font-size: 14px;
         text-align: center;
         text-transform: capitalize;
       }
@@ -150,22 +168,12 @@ $theme: map-merge(
             padding-bottom: 100%;
           }
 
-          &.-today {
-            font-weight: bold;
-          }
-
-          &.-disabled {
-            opacity: 0.5;
-            cursor: default;
-            pointer-events: none;
-          }
-
           &.-selected,
           &.-selected-start,
           &.-selected-middle,
           &.-selected-end {
             @include v(background, color-primary);
-            color: #ffffff;
+            @include v(color, color-white);
 
             &:hover {
               @include v(background, color-primary);
@@ -190,7 +198,7 @@ $theme: map-merge(
           }
 
           &:hover {
-            background: #f2f2f2;
+            @include v(background, color-light-grey);
           }
         }
       }
@@ -199,7 +207,7 @@ $theme: map-merge(
     .year-grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      grid-gap: 2px;
+      grid-gap: 5px 2px;
       padding: 5px;
 
       .year {
@@ -208,20 +216,10 @@ $theme: map-merge(
         justify-content: center;
         cursor: pointer;
         border-radius: 100px;
-        height: 40px;
+        height: 35px;
 
         &:hover {
-          background: #f2f2f2;
-        }
-
-        &.-today {
-          font-weight: bold;
-        }
-
-        &.-disabled {
-          opacity: 0.5;
-          cursor: default;
-          pointer-events: none;
+          @include v(background, color-light-grey);
         }
       }
     }
@@ -229,7 +227,7 @@ $theme: map-merge(
     .month-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-gap: 2px;
+      grid-gap: 5px 2px;
       padding: 5px;
 
       .month {
@@ -238,30 +236,20 @@ $theme: map-merge(
         justify-content: center;
         cursor: pointer;
         border-radius: 100px;
-        height: 40px;
+        height: 35px;
         text-transform: capitalize;
-
-        &.-today {
-          font-weight: bold;
-        }
 
         &.-selected {
           @include v(background, color-primary);
-          color: #ffffff;
+          @include v(color, color-white);
 
           &:hover {
             @include v(background, color-primary);
           }
         }
 
-        &.-disabled {
-          opacity: 0.5;
-          cursor: default;
-          pointer-events: none;
-        }
-
         &:hover {
-          background: #f2f2f2;
+          @include v(background, color-light-grey);
         }
       }
     }
@@ -296,7 +284,6 @@ $theme: map-merge(
         width: 100%;
         height: 100%;
 
-
         &:before {
           display: block;
           content: '';
@@ -305,7 +292,7 @@ $theme: map-merge(
           left: 0;
           width: 100%;
           height: 100%;
-          background: rgba(0, 0, 0, 0.07);
+          @include v(background, color-light-grey);
           border-radius: 100%;
         }
 
@@ -324,7 +311,7 @@ $theme: map-merge(
           z-index: 1;
 
           &.selected {
-            color: #ffffff;
+            @include v(color, color-white);
           }
         }
 
@@ -372,7 +359,7 @@ $theme: map-merge(
 }
 
 .react-next-dates-popper {
-  background: #ffffff;
+  @include v(background, color-white);
   border-radius: 5px;
   overflow: hidden;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.12);
@@ -383,7 +370,7 @@ $theme: map-merge(
   }
 
   &.time {
-    width: 200px;
+    width: 220px;
     padding: 5px;
   }
 }
